# W-Lib

./: .clang-format  CMakeLists.txt
W-Lib/: CMakeLists.txt
W-Lib/W-Lib_Utility/: CMakeLists.txt
W-Lib/W-Lib_Utility/src/: W-Lib_utility.cpp
WLib/: CMakeLists.txt
WLib/WLib_Byte_Sink/: CMakeLists.txt
WLib/WLib_Byte_Sink/inc/: WLib_Byte_Buffer_Sink.hpp  WLib_Byte_Sink_Concept.hpp
WLib/WLib_Byte_Sink/src/: WLib_Byte_Sink.cpp
WLib/WLib_CRC/: CMakeLists.txt
WLib/WLib_Callback_Interface/: CMakeLists.txt  README.md  WLib_Callback_Interface.hpp
WLib/WLib_Callback_Interface/inc/: Callback_Interface_utility.hpp  Function_Callback.hpp  Memberfunction_Callback.hpp
WLib/WLib_Callback_Interface/src/: WLib_Callback_Interface.cpp
WLib/WLib_Container/: CMakeLists.txt
WLib/WLib_Container/src/: WLib_container.cpp
WLib/WLib_Puplisher/: CMakeLists.txt  exa.cpp
WLib/WLib_Puplisher/inc/: WLib_Puplisher_Inteface.hpp
WLib/WLib_Puplisher/src/: WLib_Puplisher.cpp
WLib/WLib_SPI_Abstraction/: CMakeLists.txt  WLib_SPI_Interface.hpp
WLib/WLib_SPI_Abstraction/inc/: synchron_SPI_Interface.hpp
WLib/WLib_SPI_Abstraction/src/: synchron_SPI_Interface.cpp
WLib/WLib_Serializer/: CMakeLists.txt  README.md
WLib/WLib_Serializer/inc/: WLib_serializer.hpp
WLib/WLib_Serializer/src/: WLib_serializer.cpp
WLib/WLib_Utility/: CMakeLists.txt
WLib/WLib_Utility/src/: WLib_utility.cpp
WLib/inc/: WLib_Byte_Sink_Buffer.hpp  WLib_Callback_Interface.hpp  WLib_Concepts.hpp  WLib_LockFree_Puplisher.hpp  WLib_Publisher_Interface.hpp  WLib_SPSC.hpp  WLib_SPSC_Subscriber.hpp  WLib_Utility.hpp
WLib/port/PC/inc/: WLib_OS.hpp
WLib/src/: WLib.cpp
examples/: CMakeLists.txt
examples/demo_callback_interface/: CMakeLists.txt  exa_callback_interface.cpp
examples/demo_crc/: CMakeLists.txt
examples/demo_example/: CMakeLists.txt  exa_demo.cpp
examples/demo_puplisher/: CMakeLists.txt  exa.cpp
examples/demo_serializer/: CMakeLists.txt  exa_my_type.hpp  exa_serializer.cpp  exa_serializer.hpp  exa_serializer_custom.cpp  exa_serializer_min.cpp  exa_serializer_min.hpp
examples/expected_dummy/: CMakeLists.txt  exa.cpp
examples/puplisher/: CMakeLists.txt  exa_puplisher.cpp
examples/spsc_queue/: CMakeLists.txt  exa.cpp
examples/static_vector/: CMakeLists.txt  exa.cpp
inc/: wlib.hpp
src/: wlib.cpp
tests/: CMakeLists.txt
tests/tst_CRC/: CMakeLists.txt
tests/tst_SPI_Abstraction_Interface/: CMakeLists.txt  tst_SPI_Abstraction_Interface.cpp
tests/tst_byte_buffer_sink/: CMakeLists.txt  tst_byte_buffer_sink.cpp
tests/tst_demo/: CMakeLists.txt  tst_demo.cpp
tests/tst_serializer/: CMakeLists.txt  tst_serializer.cpp
wlib_CRC/: CMakeLists.txt
wlib_CRC/inc/: wlib_CRC_16_ccitt_false.hpp  wlib_CRC_interface.hpp
wlib_CRC/src/: wlib_CRC_16_ccitt_false.cpp  wlib_CRC_32.cpp  wlib_CRC_64_go_iso.cpp  wlib_CRC_8.cpp
wlib_CStr_sink/: CMakeLists.txt
wlib_CStr_sink/inc/: wlib_CStr_sink_interface.hpp
wlib_CStr_sink/src/: wlib_CStr_sink_interface.cpp
wlib_Container/: CMakeLists.txt
wlib_Container/inc/: wlib_MPSC.hpp  wlib_SPSC.hpp
wlib_Container/src/: wlib_container.cpp
wlib_LED_abstraction/: CMakeLists.txt
wlib_LED_abstraction/inc/: wlib_LED_abstraction.hpp
wlib_LED_abstraction/src/: wlib_LED_abstraction.cpp
wlib_OS/: CMakeLists.txt
wlib_OS/inc_FreeRTOS/: wlib_OS.hpp
wlib_OS/inc_no_OS/: wlib_OS.hpp
wlib_OS/src/: wlib_OS.cpp
wlib_OS/src_FreeRTOS/: wlib_OS.cpp
wlib_OS/src_FreeRTOS_CORTEX-M7/: wlib_OS_port.cpp
wlib_OS/src_no_OS/: wlib_no_OS.cpp
wlib_PIN_abstraction/: CMakeLists.txt
wlib_PIN_abstraction/inc/: wlib_PIN_abstraction.hpp
wlib_PIN_abstraction/src/: wlib_PIN_abstraction.cpp
wlib_PWM_abstraction/: CMakeLists.txt  README.md
wlib_PWM_abstraction/inc/: wlib_PWM_abstraction.hpp
wlib_PWM_abstraction/src/: wlib_PWM_abstraction.cpp
wlib_SPI_abstraction/: CMakeLists.txt  README.md
wlib_SPI_abstraction/inc/: wlib_SPI_abstraction.hpp
wlib_SPI_abstraction/src/: wlib_SPI_abstraction.cpp
wlib_callback/: CMakeLists.txt
wlib_callback/inc/: wlib_callback.hpp
wlib_callback/src/: wlib_callback.cpp
wlib_publisher/: CMakeLists.txt
wlib_publisher/inc/: wlib_LF_publisher.hpp  wlib_SPSC_subscriber.hpp  wlib_publisher.hpp  wlib_publisher_interface.hpp
wlib_publisher/src/: wlib_publisher.cpp
wlib_serializer/: CMakeLists.txt  README.md
wlib_serializer/inc/: wlib_serializer.hpp
wlib_serializer/src/: wlib_serializer.cpp
